# asteroids_like_game

./: .gitignore  README.md  install.sh
asteroids/src/: CMakeLists.txt  aircraft.cpp  aircraft.h  asteroids_main.cpp  entity.cpp  entity.h  game.cpp  game.h  resource_enum_classes.h  resource_holder.hpp  resource_holder.inl  scene_node.cpp  scene_node.h  sprite_node.cpp  sprite_node.h  world.cpp  world.h
asteroids/src/cmake_modules/: FindSFML.cmake
config/: environment.sh
